--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -9,7 +9,7 @@ body {
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 1px solid green;
+    border: 1px solid palevioletred;
     margin: 0 auto;
 }
 .container h1 {
