--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -3,7 +3,7 @@ body {
     color: palevioletred;
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
 }
 .container {
     width: 70%;
